Sutter Health/src/objects/Site_Session__c.object
<CustomObject>
    <description>Session data that includes dimensions(Browser,User Name,Affiliate,Region,Day of week)</description>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <description>Browser Name with version</description>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week__c</fullName>
        <label>Day Of Week</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <label>User Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Metric Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Site Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Affiliate__c</columns>
        <columns>Browser__c</columns>
        <columns>Day_Of_Week__c</columns>
        <columns>Value__c</columns>
        <columns>Region__c</columns>
        <columns>Session_Date__c</columns>
        <columns>User_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ses-{0000000000}</displayFormat>
        <label>Site Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>